Bug 491289 - Cannot save certain settings
Summary: Cannot save certain settings
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.1.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-05 07:52 UTC by hey
Modified: 2024-08-07 07:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description hey 2024-08-05 07:52:14 UTC
SUMMARY

I recently reinstalled my Kinoite system and I also installed the Kontact suite. However, I cannot change a lot of settings, apparently because of a weird interaction between Kontact and KNotes.

Whenever I attempt to change a Kontact setting (such as ‘Show component sidebar’), the change is not saved and I’m getting an error message on the console (see below).

STEPS TO REPRODUCE
1. Open Kontact from a terminal
2. Open Kontact settings
3. Uncheck 'Show component sidebar'
4. Click 'Apply'

OBSERVED RESULT

Component sidebar is still shown, error message is shown in terminal:

> Communication problem with KNotes. Error message was: “org.freedesktop.DBus.Error.UnknownObject” : " “No such object path ‘/KNotes’” "

EXPECTED RESULT

Component sidebar is hidden. No error message.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora Linux 40 Kinoite
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2

ADDITIONAL INFO

I installed KNotes, but that didn’t help either.
Comment 1 hey 2024-08-06 07:59:38 UTC
It looks like this will be fixed once [1] hits a release.

[1] https://invent.kde.org/pim/kontact/-/commit/44fa501b8327dd690d04dc4cabb216a7554a1dfa
Comment 2 Laurent Montel 2024-08-07 07:01:13 UTC
Git commit 39b06fc7cc34b9ad0f49a519bf70f73c99a1a58c by Laurent Montel.
Committed on 07/08/2024 at 07:00.
Pushed by mlaurent into branch 'release/24.08'.

Fix Bug 491289: Cannot save certain settings

FIXED-IN: 24.08.0

M  +4    -6    src/ksettingsdialog/kontactkcmultidialog.cpp
M  +3    -3    src/ksettingsdialog/kontactkcmultidialog.h
M  +1    -1    src/ksettingsdialog/kontactkcmultidialog_p.h
M  +2    -2    src/ksettingsdialog/kontactsettingsdialog.cpp
M  +2    -2    src/mainwindow.cpp

https://invent.kde.org/pim/kontact/-/commit/39b06fc7cc34b9ad0f49a519bf70f73c99a1a58c