Fix Bug 491289: Cannot save certain settings

FIXED-IN: 24.08.0
BUG: 491289